# sockridge

./: .gitignore  Makefile  README.md  RUNBOOK.md  buf.gen.yaml  docker-compose.yml  go.work  go.work.sum  index.html  install.sh
.github/workflows/: release.yml
cli/: go.mod  go.sum  main.go
cli/cmd/: access.go  audit.go  auth.go  publish.go  search.go  webhook.go
cli/internal/client/: client.go
cli/internal/keystore/: keystore.go
embedder/: Dockerfile  main.py  requirements.txt
proto/agentregistry/v1/: agent.proto  registry.proto
sdk/go/: go.mod
sdk/go/examples/: main.go
sdk/go/socialagents/: auth.go  models.go  operations.go  registry.go
sdk/go/sockridge/: auth.go  models.go  operations.go  registry.go
sdk/python/: README.md  auth.py  pyproject.toml
sdk/python/socialagents/: auth.py  registry.py
sdk/python/sockridge/: __init__.py  models.py  registry.py
sdk/typescript/: auth.ts  index.ts  models.ts  package-lock.json  package.json  registry.ts  test.ts
sdk/typescript/src/: auth.ts  models.ts  registry.ts
server/: Dockerfile  go.mod  go.sum
server/cmd/server/: main.go
server/internal/access/: expiry.go  service.go
server/internal/audit/: service.go
server/internal/auth/: ed25519.go  jwt.go  service.go  service_test.go
server/internal/config/: config.go
server/internal/discovery/: broadcaster.go  service.go
server/internal/embedder/: client.go
server/internal/gatekeeper/: pinger.go  pinger_test.go  scorer.go  service.go  (+1 more)
server/middleware/: auth.go
server/migrations/: init.sql
test_agents/: chat.json  medical.json
(+16 files in other folders)
