[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sockridge"
version = "0.1.0"
description = "Python SDK for the SockRidge agent registry"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "httpx[http2]>=0.27.0",
    "cryptography>=42.0.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[project.urls]
Homepage = "https://github.com/Sockridge/sockridge"
